[gd_scene load_steps=15 format=3 uid="uid://bp87ce3f6byte"]

[ext_resource type="PackedScene" uid="uid://x0k70uqxeyw" path="res://game/actors/enemies/enemy_base.tscn" id="1_obt61"]
[ext_resource type="Shader" uid="uid://ck6c72yi15g8r" path="res://game/resources/shaders/flash.gdshader" id="2_7ctpc"]
[ext_resource type="Script" uid="uid://d01s8vgi48ee" path="res://game/actors/enemies/boss/boss.gd" id="3_kixy1"]
[ext_resource type="AnimationLibrary" uid="uid://c3xafg7k72g70" path="res://game/resources/animations/boss.res" id="3_mtj58"]
[ext_resource type="Texture2D" uid="uid://dmdcb4lcagda1" path="res://game/actors/enemies/boss/assets/visual/hand0001.png" id="3_sgt1v"]
[ext_resource type="Texture2D" uid="uid://dr31l6tajj32x" path="res://game/actors/enemies/boss/assets/visual/hand0002.png" id="5_tsdtj"]
[ext_resource type="Texture2D" uid="uid://betgdnnqvt5ec" path="res://game/actors/enemies/boss/assets/visual/hand0000.png" id="5_tve6w"]
[ext_resource type="Texture2D" uid="uid://cj1qv6yaaq120" path="res://game/actors/enemies/boss/assets/visual/boss0000.png" id="8_kixy1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mtj58"]
resource_local_to_scene = true
shader = ExtResource("2_7ctpc")
shader_parameter/color_a = Color(1, 1, 1, 1)
shader_parameter/color_b = Color(1, 1, 1, 1)
shader_parameter/colors_affect_alpha = false
shader_parameter/flash_amount = 0.0
shader_parameter/flash_speed = 1.0
shader_parameter/transparency = 1.0
shader_parameter/intensity = 0.0

[sub_resource type="Animation" id="Animation_sgt1v"]
resource_name = "attack"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hand:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 1.25, 1.375),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("5_tve6w"), ExtResource("3_sgt1v"), ExtResource("5_tsdtj"), ExtResource("3_sgt1v"), ExtResource("5_tve6w")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tsdtj"]
_data = {
&"attack": SubResource("Animation_sgt1v")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kixy1"]
size = Vector2(48, 112)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tsdtj"]
size = Vector2(48, 112)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pef7n"]
size = Vector2(284, 121)

[node name="boss" instance=ExtResource("1_obt61")]
material = SubResource("ShaderMaterial_mtj58")
collision_layer = 6
script = ExtResource("3_kixy1")
min_attack_time = 2.0
max_attack_time = 3.0
follow_y = false

[node name="hand" type="Sprite2D" parent="." index="0"]
use_parent_material = true
position = Vector2(-32, 20)
texture = ExtResource("5_tve6w")

[node name="hand_animator" type="AnimationPlayer" parent="hand" index="0"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_tsdtj")
}

[node name="animator" parent="." index="1"]
libraries = {
&"": ExtResource("3_mtj58")
}

[node name="main_sprite" parent="." index="2"]
texture = ExtResource("8_kixy1")

[node name="collider" parent="." index="3"]
position = Vector2(7, 5)
shape = SubResource("RectangleShape2D_kixy1")

[node name="health_manager" parent="." index="4"]
max_health = 200.0

[node name="hurt_box" parent="health_manager" index="0"]
position = Vector2(7, 5)
shape = SubResource("RectangleShape2D_tsdtj")

[node name="attack_timer" type="Timer" parent="." index="6"]
one_shot = true

[node name="begin_fight_range" type="Area2D" parent="." index="7"]
collision_layer = 0

[node name="collision" type="CollisionShape2D" parent="begin_fight_range" index="0"]
position = Vector2(-105.5, -0.5)
shape = SubResource("RectangleShape2D_pef7n")

[node name="ground_marker" type="Marker2D" parent="." index="8"]
position = Vector2(-48, 60)

[connection signal="timeout" from="attack_timer" to="." method="_on_attack_timer_timeout"]
[connection signal="body_entered" from="begin_fight_range" to="." method="_on_begin_fight_range_body_entered"]
[connection signal="body_exited" from="begin_fight_range" to="." method="_on_begin_fight_range_body_exited"]

[editable path="health_manager"]
